Feat(back);new statues (#34)
* donnée exemple

* fix lint

* new statues

* openapi

* fix
